--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -1,6 +1,32 @@
 <mat-tab-group>
-    <mat-tab label="First"> Contentsdcwscdsd 1 </mat-tab>
-    <mat-tab label="Second"> Contenscsdt 2 </mat-tab>
+    <mat-tab label="First"> 
+
+
+
+
+
+
+
+
+      <div class="alert alert-success d-flex align-items-center" *ngFor="let todo of doneTodo">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24">
+          <use xlink:href="#check-circle-fill"></use>
+        </svg>
+        <span>{{ todo.title}}</span>
+      </div>
+      
+    
+    </mat-tab>
+    <mat-tab label="Second">  
+      
+      <div class="alert alert-success d-flex align-items-center" *ngFor="let todo of undoneTodo">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24">
+          <use xlink:href="#check-circle-fill"></use>
+        </svg>
+        <span>{{ todo.title}}</span>
+      </div>
+      
+    </mat-tab>
     <mat-tab label="Third"> Contensdsdt 3 </mat-tab>
   </mat-tab-group>
-  
+   
