--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -26,6 +26,8 @@
       </div>
       
     </mat-tab>
-    <mat-tab label="Third"> Contensdsdt 3 </mat-tab>
+    <mat-tab label="Third"> 
+     <app-clicking></app-clicking>
+     </mat-tab>
   </mat-tab-group>
    
