--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -29,5 +29,12 @@
     <mat-tab label="Third"> 
      <app-clicking></app-clicking>
      </mat-tab>
+     <mat-tab label="forty">  
+      <input type="text" #input >
+        <app-abserver-test></app-abserver-test>
+        
+   
+      
+    </mat-tab>
   </mat-tab-group>
    
