--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -30,11 +30,10 @@
      <app-clicking></app-clicking>
      </mat-tab>
      <mat-tab label="forty">  
-      <input type="text" #input >
         <app-abserver-test></app-abserver-test>
-        
-   
-      
     </mat-tab>
+    <mat-tab label="fivety">  
+      <app-pipetest></app-pipetest>
+  </mat-tab>
   </mat-tab-group>
    
