--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -35,5 +35,8 @@
     <mat-tab label="fivety">  
       <app-pipetest></app-pipetest>
   </mat-tab>
+  <mat-tab label="sixty">  
+    <app-exhaspam></app-exhaspam>
+</mat-tab>
   </mat-tab-group>
    
