--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -38,5 +38,8 @@
   <mat-tab label="sixty">  
     <app-exhaspam></app-exhaspam>
 </mat-tab>
+<mat-tab label="seventy">  
+  <app-switch-map></app-switch-map>
+</mat-tab>
   </mat-tab-group>
    
