--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -41,5 +41,8 @@
 <mat-tab label="seventy">  
   <app-switch-map></app-switch-map>
 </mat-tab>
+<mat-tab label="seventy">  
+  <app-compair></app-compair>
+</mat-tab>
   </mat-tab-group>
    
