--- a/serviceTest/src/app/home/home.component.html
+++ b/serviceTest/src/app/home/home.component.html
@@ -41,8 +41,11 @@
 <mat-tab label="seventy">  
   <app-switch-map></app-switch-map>
 </mat-tab>
-<mat-tab label="seventy">  
+<mat-tab label="eitty">  
   <app-compair></app-compair>
+</mat-tab>
+<mat-tab label="neinty">  
+  <app-join-fork></app-join-fork>
 </mat-tab>
   </mat-tab-group>
    
